# ChangeLog for app-emulation/winetricks
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/winetricks/ChangeLog,v 1.30 2015/03/17 02:19:02 tetromino Exp $

  17 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-20140302.ebuild:
  Drop old.

  08 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org> metadata.xml:
  Add NP-Hardass as proxy maintainer

*winetricks-20141130 (07 Mar 2015)

  07 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-20130707.ebuild, +winetricks-20141130.ebuild,
  winetricks-99999999.ebuild:
  Version bump (bug #532226, thanks to jospezial), adds controlspy, qdvd,
  setupapi, updspapi, vcrun2012. Change live ebuild from svn to git (bug
  #540662, thanks to Bob Wya and NP-Hardass). Drop old.

*winetricks-20140302 (05 Mar 2014)

  05 Mar 2014; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-20130629.ebuild, +winetricks-20140302.ebuild:
  Version bump with lots and lots of updates.

*winetricks-20130707 (13 Jul 2013)

  13 Jul 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-960.ebuild, +winetricks-20130707.ebuild:
  Version bump with fixes for CJK fonts, wmp10, vcrun2005. Drop old.

  09 Jul 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  winetricks-20130629.ebuild, winetricks-99999999.ebuild, metadata.xml:
  Make unrar dependency optional (bug #476254, thanks to Ulrich Müller).

  09 Jul 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  winetricks-20130629.ebuild, winetricks-99999999.ebuild:
  Restrict tests (they require network access and try to start wine) and add
  missing dependencies (bug #475918, thanks to Markus Oehme).

*winetricks-20130629 (30 Jun 2013)

  30 Jun 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-954.ebuild, +winetricks-20130629.ebuild,
  winetricks-99999999.ebuild:
  Version bump with updates for Adobe Flash, .NET, psdk2003, etc. Switch to