@@ -1,13 +1,13 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/winetricks/winetricks-20141130.ebuild,v 1.1 2015/03/07 22:22:23 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/winetricks/winetricks-20141130.ebuild,v 1.2 2015/03/23 05:34:46 tetromino Exp $
 
 EAPI=5
 
 inherit gnome2-utils eutils
 
 if [[ ${PV} == "99999999" ]] ; then
-	EGIT_REPO_URI="https://code.google.com/p/winetricks/"
+	EGIT_REPO_URI="https://github.com/Winetricks/winetricks.git"
 	inherit git-r3
 	SRC_URI=""
 else
