@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.700 2015/03/20 06:40:34 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.701 2015/03/23 05:39:40 jer Exp $
+
+  23 Mar 2015; Jeroen Roovers <jer@gentoo.org> wireshark-1.12.4.ebuild,
+  wireshark-1.99.5.ebuild, wireshark-99999999.ebuild:
+  Use qmake-utils.eclass to find moc/uic (bug #488640).
 
 *wireshark-1.99.5 (20 Mar 2015)
 
