@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/winetricks
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/winetricks/ChangeLog,v 1.30 2015/03/17 02:19:02 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/winetricks/ChangeLog,v 1.31 2015/03/23 05:34:46 tetromino Exp $
+
+  23 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
+  winetricks-20141130.ebuild, winetricks-99999999.ebuild:
+  Move live git uri from google code (shutting down) to github.
 
   17 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
   -winetricks-20140302.ebuild:
